--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/uber?createTableIfNotExists=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/uber?createTableIfNotExists=true
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Abhi@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
 spring.jpa.hibernate.ddl-auto=update
